2004-07-09  Adam Fedor  <fedor@gnu.org>

	* Documentation/Back/Standards.txt: New EWMH file.

2004-07-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/Win32GState.m (-_compositeGState:...fraction:):
	Applied alpha blending patch by MA Garcias <lists@tragnarion.com>.
	Disabled GDI_WIDELINE_BEZIERPATH_BUG.
	* configure.ac: Added test for msimg32, needed for AlphaBlend.
	* configure: Regenerated.
	* Source/xlib/XGGState.m: Moved additional show methods to super class.
	* Source/gsc/GSGState.m: Implemented additional show methods based
	on (-showGlyphs::) and simple glyph conversion.
	
2004-06-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-standardcursor::): Added more
	standard cursors.
	* Source/win32/WIN32Server.m (-standardcursor::): Added more
	standard cursors.

2004-06-28 00:45  Alexander Malmberg <alexander@malmberg.org>

	* Headers/x11/XGServerWindow.h: Add buffer_width and buffer_height
	ivars.
	* Source/x11/XGServerWindow.m (-windowdevice:): Use buffer_width and
	buffer_height instead of xframe to keep track of the size of the
	buffer and alpha_buffer.

2004-06-28 00:41  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/XGGState.m (-setWindowDevice:): Remove use of
	cast-as-lvalue.

2004-06-26 13:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/x11/XGServerEvent.m (-processEvent: ConfigureNotify):
	Don't ignore the event for unmapped windows. Use XTranslateCoordinates
	to get the size and position right for both real and artificial
	events. Only update the position hints if we're mapped.

	* Source/x11/XGServerWindow.m: Add handlesWindowDecorations variable.
	(-handlesWindowDecorations): New method.
	(setWindowHintsForStyle, -styleoffsets:::::): If we aren't handling
	window decorations, treat all windows as borderless.
	(-stylewindow::, -setinputstate::): Assert that we're handling window
	decorations.
	(-window::::): Create the window structure earlier so it can be used
	to convert frames.