@@ -1,3 +1,9 @@
+2004-07-13 03:11  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/art/shfill.m (function_setup, -DPSshfill:): NSDebugLLog
+	helpful error messages if something was wrong in the shader
+	dictionary.
+
 2004-07-09  Adam Fedor  <fedor@gnu.org>
 
 	* Documentation/Back/Standards.txt: New EWMH file.
